# OpenPermit

./: .codecov.yml  .env.example  .gitignore  BRAND_DISAMBIGUATION.md  CERTIFICATION.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  PILOT_PROGRAM.md  PR_SUMMARY.md  README.md  SECURITY.md  audit.py  docker-compose.yml  eslint.config.cjs  index.html  index.md  jest.integration.config.js  jest.unit.config.js  mermaid  node.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  url_check_report.md  validate_repo.py  vite.config.ts
Virginia/: README.md  spotsylvania.json  spotsylvania_crosswalk.json
agent/: README.md  epa_importer.py
cli/: package.json
contexts/: fee.jsonld  inspection.jsonld  nodes.jsonld  ontology.jsonld
demo/: README.md  docker-compose.yml
docs/: CNAME  QUICK_START.md  README.md  astro-card-catalog.json  badges.md  code_validity_testing.md  data_relationships.html  hosted_model_reviews.md  ifc_approval.md  index.html  index.md  industry_adoption_guide.md  iso_standard.md  legal-mapping.md  legal_standards_mapping.md  mkdocs.yml  nfl-standards-plan.md  niem-alignment-6.0.md  outline_infographic.html  prescriptive_verification.md  programmatic_interface.md  public_engagement.md  public_site_card_catalog.md  references.md  remote_inspections.md  roadmap.md  standardized_vocabulary.md  technical_explanation.md  ui_roles.md  white_paper.md
ecosystem/: partners.md
example/: index.html  spotsylvania-innovation-sandbox.html
helpers/: compat-worker.js  (+1 more)
(+111 files in other folders)
