[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpermit"
version = "0.1.0"
description = "Standards-based permitting toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mkdocs", "mkdocs-material"]

[project.scripts]
openpermit = "openpermit.cli:main"
